<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="create_game">Create a new game!</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="results">Results:</string>
    <string name="new_user">New Player:</string>
    <string name="play">Play!</string>
    <string name="illegal_move">Illegal move! Try an open slot.</string>

</resources>
