<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_game_txt"
        android:text="@string/create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/spinner_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/player_1_txt"
            android:text="@string/player_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Spinner
            android:id="@+id/player_1_spn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/darker_gray"
            android:popupBackground="@android:color/background_dark"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_player_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"/>
        <EditText
            android:id="@+id/player_1_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/player_2_txt"
            android:text="@string/player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Spinner
            android:id="@+id/player_2_spn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/darker_gray"
            android:popupBackground="@android:color/background_dark"
            />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/new_player_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"/>
        <EditText
            android:id="@+id/player_2_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/playbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/play"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:layout_marginTop="20dp"
        />
    <ListView
        android:id="@+id/results_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
